otp genrate complted

--- a/views/layout/allheader.ejs
+++ b/views/layout/allheader.ejs
@@ -39,13 +39,13 @@
                     </button>
 
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.png" alt="Molla Logo" width="105" height="25">
+                        <img src="assets/images/logo.png" alt="FurniHub Logo" width="105" height="25">
                     </a>
 
                     <nav class="main-nav">
                         <ul class="menu">
                             <li class="megamenu-container active">
-                                <a href="">Home</a>
+                                <a href="/">Home</a>
                             </li>
                             <li>
                                 <a href="">Shop</a>
