--- a/views/layout/mobile.ejs
+++ b/views/layout/mobile.ejs
@@ -14,7 +14,7 @@
         <nav class="mobile-nav">
             <ul class="mobile-menu">
                 <li class="active">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="category.html">Shop</a>
@@ -25,7 +25,7 @@
                 <li>
                     <a href="#">Pages</a>
                     <ul>
-                        <li><a href="login.html">Login</a></li>
+                        <li><a href="/register">Login</a></li>
                         <li>
                             <a href="about.html">About</a>
                         </li>
