--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -36,12 +36,12 @@
                             <i class="icon-long-arrow-right"></i>
                         </button>
     
-                        <div class="custom-control custom-checkbox">
+                        <!-- <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="signin-remember">
                             <label class="custom-control-label" for="signin-remember">Remember Me</label>
-                        </div><!-- End .custom-checkbox -->
+                        </div>End .custom-checkbox -->
     
-                        <div class="mt-2">
+                        <div class="mt-1 pl-5">
                             <a href="#" class="forgot-link">Forgot Your Password?</a>
                         </div><!-- End .mt-2 -->
                     </div><!-- End .form-footer -->
@@ -69,79 +69,8 @@
     
     
 </main><!-- End .main -->
-<footer class="footer">
-    <div class="footer-middle">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-lg-3">
-                    <div class="widget widget-about">
-                        <img src="assets/images/logo.png" class="footer-logo" alt="Footer Logo" width="105" height="25">
-                        <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
+<%- include('../layout/allfooter.ejs') %>
 
-                        <div class="social-icons">
-                            <a href="#" class="social-icon" target="_blank" title="Facebook"><i class="icon-facebook-f"></i></a>
-                            <a href="#" class="social-icon" target="_blank" title="Twitter"><i class="icon-twitter"></i></a>
-                            <a href="#" class="social-icon" target="_blank" title="Instagram"><i class="icon-instagram"></i></a>
-                            <a href="#" class="social-icon" target="_blank" title="Youtube"><i class="icon-youtube"></i></a>
-                            <a href="#" class="social-icon" target="_blank" title="Pinterest"><i class="icon-pinterest"></i></a>
-                        </div><!-- End .soial-icons -->
-                    </div><!-- End .widget about-widget -->
-                </div><!-- End .col-sm-6 col-lg-3 -->
-
-                <div class="col-sm-6 col-lg-3">
-                    <div class="widget">
-                        <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
-
-                        <ul class="widget-list">
-                            <li><a href="about.html">About FurniHub</a></li>
-                            <li><a href="#">How to shop on FurniHub</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
-                            <li><a href="login.html">Log in</a></li>
-                        </ul><!-- End .widget-list -->
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-6 col-lg-3 -->
-
-                <div class="col-sm-6 col-lg-3">
-                    <div class="widget">
-                        <h4 class="widget-title">Customer Service</h4><!-- End .widget-title -->
-
-                        <ul class="widget-list">
-                            <li><a href="#">Payment Methods</a></li>
-                            <li><a href="#">Money-back guarantee!</a></li>
-                            <li><a href="#">Returns</a></li>
-                            <li><a href="#">Shipping</a></li>
-                            <li><a href="#">Terms and conditions</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul><!-- End .widget-list -->
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-6 col-lg-3 -->
-
-                <div class="col-sm-6 col-lg-3">
-                    <div class="widget">
-                        <h4 class="widget-title">My Account</h4><!-- End .widget-title -->
-
-                        <ul class="widget-list">
-                            <li><a href="/register">Sign In</a></li>
-                            <li><a href="cart.html">View Cart</a></li>
-                            <li><a href="#">My Wishlist</a></li>
-                            <li><a href="#">Track My Order</a></li>
-                            <li><a href="#">Help</a></li>
-                        </ul><!-- End .widget-list -->
-                    </div><!-- End .widget -->
-                </div><!-- End .col-sm-6 col-lg-3 -->
-            </div><!-- End .row -->
-        </div><!-- End .container -->
-    </div><!-- End .footer-middle -->
-
-    <div class="footer-bottom">
-        <div class="container">
-            <p class="footer-copyright">Copyright © 2024 FurniHub. All Rights Reserved.</p><!-- End .footer-copyright -->
-            <figure class="footer-payments">
-                <img src="assets/images/payments.png" alt="Payment methods" width="272" height="20">
-            </figure><!-- End .footer-payments -->
-        </div><!-- End .container -->
-    </div><!-- End .footer-bottom -->
-</footer><!-- End .footer -->
 </div><!-- End .page-wrapper -->
 <button id="scroll-top" title="Back to Top"><i class="icon-arrow-up"></i></button>
 
