add aboutpage and set login page

--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -19,7 +19,7 @@
                 <h3>OTP Verification</h3>
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="register-2" role="tabpanel" aria-labelledby="register-tab-2">
-                        <form action="/login" method="post" style="color: black;">
+                        <form action="/verifyotp" method="post" style="color: black;">
                             <div class="form-group">
                                 <label for="otp" style="color: black;">Enter 4-digit OTP</label>
                                 <input type="text" class="form-control otp-box" id="otp" name="otp" maxlength="4" pattern="\d{4}" title="Please enter a 4-digit OTP" required>
