--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -17,18 +17,26 @@
         <div class="container">
            
             <div class="form-box" style="background-color: rgb(204, 202, 202);">
-                <form action="" method="post">
+                <form action="/loginverfy" method="post">
                     <h2 class="text-center mb-4">Sign In</h2>
                    
                     <div class="form-group">
                         <label for="singin-email">Username or Email address *</label>
-                        <input type="text" class="form-control" id="singin-email" name="singin-email" required>
+                        <input type="text" class="form-control" id="singin-email" name="email" required>
                     </div><!-- End .form-group -->
     
                     <div class="form-group">
                         <label for="singin-password">Password *</label>
-                        <input type="password" class="form-control" id="singin-password" name="singin-password" required>
+                        <input type="password" class="form-control" id="singin-password" name="password" required>
                     </div><!-- End .form-group -->
+                    <% 
+                    if(typeof message !== 'undefined'){
+                      %>
+                       <small style="color: rgb(241, 134, 134);">  <%= message %>   </small>
+                       <%
+                    }
+            
+            %>
     
                     <div class="form-footer">
                         <button type="submit" class="btn btn-outline-primary">
