--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -31,18 +31,19 @@
                                     <i class="icon-long-arrow-right"></i>
                                 </button>
 
-                                <a href="/goback" class="btn btn-outline-dark-2">
+                                <!-- <a href="/goback" class="btn btn-outline-dark-2">
                                     <span>GO BACK</span>
                                     <i class="icon-long-arrow-left"></i>
-                                </a>
+                                </a> -->
                             </div><!-- End .form-footer -->
                         </form>
                     </div><!-- .End .tab-pane -->
                 </div><!-- End .tab-content -->
             </div><!-- End .form-tab -->
-            <h6 class="text-danger" id="error-message"></h6>
-            <a href="/resendotp" class="text-dark">Resend OTP <i class="icon-long-arrow-left"></i></a>
-            <div id="countdown" style="color: white;"></div>
+            <!-- <h6 class="text-danger" id="error-message"></h6> -->
+           <button class="btn btn-outline-dark-2"><a href="/resendotp" class="text-dark">Resend OTP <i class="icon-long-arrow-left"></i></a></button> 
+
+            <div id="countdown" style="color: white;"></div> <!-- count Down-->
         </div><!-- End .form-box -->
     </div><!-- End .container -->
 
