--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -2,8 +2,8 @@
 
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
     <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-      <a class="sidebar-brand brand-logo" href="index.html"><img src="/admin_assets/images/favicon.png" alt="logo" /></a>
-      <a class="sidebar-brand brand-logo-mini" href="index.html"><img src="/admin_assets/images/favicon.png" alt="logo" /></a>
+      <a class="sidebar-brand brand-logo" href=""><img src="/admin_assets/images/favicon.png" alt="logo" /></a>
+      <a class="sidebar-brand brand-logo-mini" href=""><img src="/admin_assets/images/favicon.png" alt="logo" /></a>
     </div>
     <ul class="nav">
       <li class="nav-item profile">
