--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -48,7 +48,7 @@
                                 <a href="/">Home</a>
                             </li>
                             <li>
-                                <a href="">Shop</a>
+                                <a href="/allproducts">Shop</a>
                             </li>
                             <li>
                                 <a href="" >Product</a>
@@ -152,7 +152,8 @@
                             </div><!-- End .dropdown-menu -->
                         </div><!-- End .cart-dropdown -->
                         <div class="profile-icon">
-                            <a href="/profile" style="font-size: 20px; padding-left: 15px; color: black;"><i class="fa-solid fa-user"></i></a>
+                            <a href="/profile" style="font-size: 20px; padding-left: 15px; color: black;"><i class="fa-solid fa-user"></i>
+                            </a>
                         </div> <!-- End porfile icon-->
                     </div><!-- End .header-right -->
                 </div><!-- End .container -->
