--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -69,17 +69,17 @@
       <li class="nav-item menu-items">
         <a class="nav-link"  href="/admin/customers">
           <span class="menu-icon">
-            <i class="mdi mdi-laptop"></i>
+            <i class="mdi mdi-contacts"></i>
           </span>
           <span class="menu-title">Customers</span>
         </a>
       </li>
       <li class="nav-item menu-items">
-        <a class="nav-link" href="pages/forms/basic_elements.html">
+        <a class="nav-link" href="/admin/category">
           <span class="menu-icon">
-            <i class="mdi mdi-playlist-play"></i>
+            <i class="mdi mdi-table-large"></i>
           </span>
-          <span class="menu-title">Form Elements</span>
+          <span class="menu-title">Category</span>
         </a>
       </li>
       <li class="nav-item menu-items">
@@ -101,7 +101,7 @@
       <li class="nav-item menu-items">
         <a class="nav-link" href="pages/icons/mdi.html">
           <span class="menu-icon">
-            <i class="mdi mdi-contacts"></i>
+            <i class="mdi mdi-laptop"></i>
           </span>
           <span class="menu-title">Icons</span>
         </a>
@@ -134,3 +134,8 @@
       </li>
     </ul>
   </nav>
+
+
+
+
+ 
