--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -31,17 +31,17 @@
                                     <i class="icon-long-arrow-right"></i>
                                 </button>
 
-                                <!-- <a href="/goback" class="btn btn-outline-dark-2">
+                                <a href="/back-register" style="text-decoration: none;" class="btn btn-outline-dark-2">
                                     <span>GO BACK</span>
                                     <i class="icon-long-arrow-left"></i>
-                                </a> -->
+                                </a>
                             </div><!-- End .form-footer -->
                         </form>
                     </div><!-- .End .tab-pane -->
                 </div><!-- End .tab-content -->
             </div><!-- End .form-tab -->
             <!-- <h6 class="text-danger" id="error-message"></h6> -->
-           <button class="btn btn-outline-dark-2"><a href="/resendotp" class="text-dark">Resend OTP <i class="icon-long-arrow-left"></i></a></button> 
+           <button class="btn btn-outline-dark-2"><a href="/resendotp" class="text-dark" onclick="alerts()">Resend OTP <i class="icon-long-arrow-left"></i></a></button> 
 
             <div id="countdown" style="color: white;"></div> <!-- count Down-->
         </div><!-- End .form-box -->
@@ -88,6 +88,12 @@
         // Update the timer every second
         const timerInterval = setInterval(updateTimer, 1000);
 
+    </script>
+
+    <script>
+        function alerts(){
+            alert("Re-sennd OTP has been send your Email")
+        }
     </script>
     
      <!-- Plugins JS File -->
