--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -47,6 +47,13 @@
 </div>
 
 
+<footer class="footer">
+    <div class="d-sm-flex justify-content-center justify-content-sm-between">
+      <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © FurniHub.com 2024</span>
+      <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free Bootstrap admin templates from Bootstrapdash.com</span>
+    </div>
+</footer>
+
 <script>
     function deleteCategory(categoryId) {
         if (confirm("Are you sure you want to delete this category?")) {
