--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -83,11 +83,11 @@
         </a>
       </li>
       <li class="nav-item menu-items">
-        <a class="nav-link" href="pages/tables/basic-table.html">
+        <a class="nav-link" href="/admin/products">
           <span class="menu-icon">
             <i class="mdi mdi-table-large"></i>
           </span>
-          <span class="menu-title">Tables</span>
+          <span class="menu-title">Products</span>
         </a>
       </li>
       <li class="nav-item menu-items">
