--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -23,7 +23,7 @@
                                 <li><a href="wishlist.html"><i class="icon-heart-o"></i>My Wishlist</a></li>
                                 <li><a href="about.html">About Us</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="/register"><i class="icon-user"></i>Login</a></li>
+                                <li><a href="/login"><i class="icon-user"></i>Login</a></li>
                             </ul>
                         </li>
                     </ul><!-- End .top-menu -->
@@ -58,7 +58,7 @@
                                 <a href="#" class="sf-with-ul">Pages</a>
 
                                 <ul>
-                                    <li><a href="/register">Login</a></li>
+                                    <li><a href="/login">Login</a></li>
                                     <li>
                                         <a href="about.html" >About</a>
                                     </li>
@@ -116,7 +116,7 @@
                                 <!-- <span class="cart-count">2</span> -->
                             </a>
 
-                            <div class="dropdown-menu dropdown-menu-right">
+                            <!-- <div class="dropdown-menu dropdown-menu-right">
                                 <div class="dropdown-cart-products">
                                     <div class="product">
                                         <div class="product-cart-details">
@@ -128,7 +128,7 @@
                                                 <span class="cart-product-qty">1</span>
                                                 x $84.00
                                             </span>
-                                        </div><!-- End .product-cart-details -->
+                                        </div> End .product-cart-details 
 
                                         <figure class="product-image-container">
                                             <a href="product.html" class="product-image">
@@ -136,7 +136,7 @@
                                             </a>
                                         </figure>
                                         <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                    </div><!-- End .product -->
+                                    </div> End .product 
 
                                     <div class="product">
                                         <div class="product-cart-details">
@@ -148,7 +148,7 @@
                                                 <span class="cart-product-qty">1</span>
                                                 x $76.00
                                             </span>
-                                        </div><!-- End .product-cart-details -->
+                                        </div>End .product-cart-details 
 
                                         <figure class="product-image-container">
                                             <a href="product.html" class="product-image">
@@ -156,25 +156,25 @@
                                             </a>
                                         </figure>
                                         <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                    </div><!-- End .product -->
-                                </div><!-- End .cart-product -->
+                                    </div> End .product 
+                                </div>End .cart-product 
 
                                 <div class="dropdown-cart-total">
                                     <span>Total</span>
 
                                     <span class="cart-total-price">$160.00</span>
-                                </div><!-- End .dropdown-cart-total -->
+                                </div> End .dropdown-cart-total 
 
                                 <div class="dropdown-cart-action">
                                     <a href="cart.html" class="btn btn-primary">View Cart</a>
                                     <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
-                                </div><!-- End .dropdown-cart-total -->
-                            </div><!-- End .dropdown-menu -->
+                                </div> End .dropdown-cart-total 
+                            </div>End .dropdown-menu -->
                         </div><!-- End .cart-dropdown -->
                     </div><!-- End .cart-dropdown -->
-                    <div class="profile-icon">
+                    <!-- <div class="profile-icon">
                         <a href="/profile" style="font-size: 20px; padding-left: 15px; color: black;"><i class="fa-solid fa-user"></i></a>
-                    </div> <!-- End porfile icon-->
+                    </div> End porfile icon -->
                     </div><!-- End .header-right -->
                 </div><!-- End .container -->
             </div><!-- End .header-middle -->
