admin session set

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -20,6 +20,7 @@
     <!-- Layout styles -->
     <link rel="stylesheet" href="/admin_assets/css/style.css">
     <!-- End layout styles -->
+    <link rel="shortcut icon" href="/admin_assets/images/favicon.png" />
     
   </head>
   <body>
@@ -30,7 +31,7 @@
           <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
             <div class="card col-lg-4 mx-auto">
               <div class="card-body px-5 py-5">
-                <h3 class="card-title text-left mb-3">Login</h3>
+                <h3 class="card-title text-left mb-3">Admin Login</h3>
                 <form method="POST" action="/admin/loginpost">
                     <div class="form-group">
                       <label>Username or email *</label>
