--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -152,8 +152,8 @@
                                 </div> End .dropdown-cart-total
                             </div>End .dropdown-menu -->
                         </div><!-- End .cart-dropdown -->
-                        <div class="profile bg-danger ml-3 dropdown">
-                            <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="profile  ml-3 dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <% if (userName) { %>
                                     <%= userName %> 
                                 <% } else { %>
