--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -90,7 +90,7 @@
           <span class="menu-title">Products</span>
         </a>
       </li>
-      <li class="nav-item menu-items">
+      <!-- <li class="nav-item menu-items">
         <a class="nav-link" href="pages/charts/chartjs.html">
           <span class="menu-icon">
             <i class="mdi mdi-chart-bar"></i>
@@ -132,7 +132,7 @@
           <span class="menu-title">Documentation</span>
         </a>
       </li>
-    </ul>
+    </ul> -->
   </nav>
 
 
