--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -28,20 +28,15 @@
                                 <tr>
                                     <td><%= index + 1 %></td>
                                     <td><%= product.name %></td>
-                                    <td><%= product.category %></td>
+                                    <td><%= product.category.name%></td>
                                     <td>₹<%= product.price %></td>
                                     <td><%= product.quantity %></td>
-                                    <td>
-                                        <% if (product.images && product.images.length > 0) { %>
-                                            <% product.images.forEach(image => { %>
-                                                <img src="/product_images/<%= image[0] %>" alt="Product Image">
-                                            <% }); %>
-                                        <% } else { %>
-                                            No images available
-                                        <% } %>
+                                    <td><%for(let i=0;i<product.pictures.length;i++){%>
+                                        <img src="/product_images/<%=product.pictures[i]%>" alt="Product Images">
+                                        <%}%>
                                     </td>
                                     <td>
-                                        <button class="btn btn-primary"><a style="color: white; text-decoration: none;" href="">Edit</a></button>
+                                        <button class="btn btn-primary"><a style="color: white; text-decoration: none;" href="/admin/products/edit/<%= product._id %>">Edit</a></button>
                                         <button class="btn btn-danger"><a style="color: white; text-decoration: none;" href="">Delete</a></button>
                                         <button class="btn btn-success"><a style="color: white; text-decoration: none;" href="">List</a></button>
                                     </td>
